[gd_scene load_steps=5 format=3 uid="uid://byvmmq1h54blk"]

[ext_resource type="Script" uid="uid://dkykfsnns5g2k" path="res://load_screen/load_screen.gd" id="1_puesy"]
[ext_resource type="PackedScene" uid="uid://b5alugxtb238t" path="res://gui/menu_button.tscn" id="2_puesy"]
[ext_resource type="PackedScene" uid="uid://djoxys77ftvr1" path="res://load_screen/load_slot.tscn" id="2_sf5y3"]
[ext_resource type="Script" uid="uid://u40hxybhheiv" path="res://load_screen/pages.gd" id="3_20cai"]

[node name="LoadScreen" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_puesy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 407.0
offset_right = 1197.0
offset_bottom = 488.0
size_flags_horizontal = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="LoadSlot" parent="MarginContainer/GridContainer" instance=ExtResource("2_sf5y3")]
layout_mode = 2

[node name="Pages" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1484.0
offset_top = -110.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("3_20cai")

[node name="1" parent="Pages" instance=ExtResource("2_puesy")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "1"

[node name="BackButton" parent="." instance=ExtResource("2_puesy")]
offset_left = 75.0
offset_top = 948.0
offset_right = 395.0
offset_bottom = 1042.0
text = "Назад"
font_size = 40

[connection signal="page_selected" from="Pages" to="." method="_render"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
